examples/fail/fail_exception_default_fn/brioche.bri
import * as brioche from "brioche";

interface TestType {
  foo: string;
  bar: string;
}

export default () => {
  throw new Error("default export exception");
}
